# re-discover

./: .gitignore  Makefile  README.md
audio/: CMakeLists.txt  Makefile  README.md  main.cpp  main.h
audio/vendors/fmod/lib/arm/: libfmod.so.13  libfmod.so.13.1  libfmodL.so.13.1
audio/vendors/fmod/lib/arm64/: libfmod.so.13.1  libfmodL.so.13.1
audio/vendors/fmod/lib/x86/: libfmod.so.13.1  libfmodL.so.13.1
audio/vendors/fmod/lib/x86_64/: libfmod.so.13.1  libfmodL.so.13.1
core/: __main__.py  model.py
gui/: credits.txt  doc.md  index.html
gui/assets/: full_to_reduced.json
gui/js/: ReDiscover_-_A_Wandering_Mind_Project10_backup.json  ReDiscover_-_A_Wandering_Mind_Project10_backup_nopath.json  patch.js
